Add max-width constraint to prevent page from being too wide

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 40px;
             line-height: 1.6;
             display: flex;
+            max-width: 67%;
         }
         .left {
             flex: 1;
