--- a/index.html
+++ b/index.html
@@ -23,23 +23,19 @@
             margin-top: 10px;
             margin-bottom: 30px;
             font-weight: bold;
-            font-size: 4.0em;
+            font-size: 2.0em;
+            text-decoration: underline;
         }
         a {
             color: #0066cc;
-            text-decoration: underline;
-            font-size: 2.0em;
-        }
-        a1 {
-            color: #0066cc;
-            text-decoration: underline;
-            font-size: 1.6em;
+            text-decoration: none;
+            font-size: 1.0em;
         }
         a:hover {
             text-decoration: underline;
         }
         b {
-            font-size: 2.0em;
+            font-size: 1.0em;
         }
         .project-desc {
             font-style: italic;
@@ -53,14 +49,15 @@
 <body>
     <div class="left">
         <h1>Owen Halpert</h1>
-        <hr>
-        <p><b>👋</b></p>
+        <p>Hello</p>
         <p><a href="https://github.com/owenhalpert">GitHub</a></p>
         <p><a href="static/resume.pdf">Resume</a></p>
         <p><a href="mailto:hello@owenhalpert.com">Email</a></p>
-        <p><b>Projects:</b></p>
+    </div>
+    <div class="right">
+        <h2>Projects</h2>
         <ul>
-            <li><a1 href="/compmusic">Coachella Over The Years</a1>
+            <li><a href="/compmusic">Coachella Over The Years</a>
                 <div class="project-desc">For "Computational Musicology" at the Universiteit van Amsterdam (2023)</div>
             </li>
         </ul>
