first blog post

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
         <p><a href="mailto:hello@owenhalpert.com">Email</a></p>
     </div>
     <div class="right">
+
+        <h2>Blog</h2>
+        <ul>
+            <li><a href="/blog/example-post.html">My First Blog Post</a>
+                <div class="project-desc">2026-01-30</div>
+            </li>
+            <li><a href="/blog/walt-disney.html">Walt Disney Family Museum</a>
+                <div class="project-desc">2026-01-30</div>
+            </li>
+        </ul>
         <h2>Projects</h2>
         <ul>
             <li><a href="/compmusic">Coachella Over The Years</a>
