--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <h2>Blog</h2>
         <ul>
-            <li><a href="/blog/test deploy.html">title</a>
+            <li><a href="/blog/blog-deployment.html">How I publish my blog</a>
                 <div class="project-desc">2026-01-30</div>
             </li>
             <li><a href="/blog/walt-disney.html">Walt Disney Family Museum</a>
