--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <li><a href="/blog/blog-deployment.html">How I publish my blog</a>
                 <div class="project-desc">2026-01-30</div>
             </li>
-            <li><a href="/blog/walt-disney.html">Walt Disney Family Museum</a>
-                <div class="project-desc">2026-01-30</div>
-            </li>
         </ul>
         <h2>Projects</h2>
         <ul>
+            <li><a href="/deadreckoning">Dead Reckoning</a>
+                <div class="project-desc">Grateful Dead setlist analysis tool (2026)</div>
+            </li>
             <li><a href="/compmusic">Coachella Over The Years</a>
                 <div class="project-desc">For "Computational Musicology" at the Universiteit van Amsterdam (2023)</div>
             </li>
